add project report page

--- a/ProjectManagement/Views/Settings/BeneficiaryType.cshtml
+++ b/ProjectManagement/Views/Settings/BeneficiaryType.cshtml
@@ -125,7 +125,10 @@
                     type: "POST",
                     data: { id: element.getAttribute("data-id") },
                     success: response => {
-                        this.parentElement.parentElement.remove();
+                        if (response.IsSuccess)
+                            element.parentElement.parentElement.remove();
+
+                        $.notify(response.Message, response.IsSuccess ? "success" : "error");
                     },
                     error: err => console.log(err)
                 });
