--- a/ProjectManagement/Views/Settings/ReportType.cshtml
+++ b/ProjectManagement/Views/Settings/ReportType.cshtml
@@ -116,11 +116,14 @@
             //delete
             if (onDelete) {
                 $.ajax({
-                    url: "/Settings/DeleteProjectStatus",
+                    url: "/Settings/DeleteReportType",
                     type: "POST",
                     data: { id: element.getAttribute("data-id") },
                     success: response => {
-                        this.parentElement.parentElement.remove();
+                        if (response.IsSuccess)
+                            element.parentElement.parentElement.remove();
+
+                        $.notify(response.Message, response.IsSuccess ? "success" : "error");
                     },
                     error: err => console.log(err)
                 });
