--- a/ProjectManagement/Views/Shared/_Side_navbar.cshtml
+++ b/ProjectManagement/Views/Shared/_Side_navbar.cshtml
@@ -14,7 +14,7 @@
         <ul class="sub-menu">
             <li><a class="links" href="/Projects/AddProject/@Model">Project Entry</a></li>
             <li><a class="links" href="/Projects/List/@Model">Project List</a></li>
-            <li><a class="links" href="#">Report</a></li>
+            <li><a class="links" href="/Projects/Report/@Model">Report</a></li>
         </ul>
     </li>
     <li>
